[project]
name = "area-maps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "hyperopt>=0.2.7",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "pyrosm>=0.6.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "xgboost>=3.0.0",
]
